# aur_builder_bot

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: authorization.rs  build.rs  main.rs  search.rs  telegram.rs
