[package]
name = "aur_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
aur-rpc = "0.2.2"
git2 = "0.18.1"
glob = "0.3.1"